added an amount per week entry

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div id="work-container">
             <p class="amt" id="amt-per-year">Amount per Year: </p>
             <p class="amt" id="amt-per-month">Amount per Month: </p>
+            <p class="amt" id="amt-per-week">Amount per Week: </p>
             <p class="amt" id="amt-per-day">Amount per Day: </p>
         </div>
     </div>
