--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
     <title>Deadline Divider</title>
 </head>
 <body>
@@ -13,11 +16,11 @@
         <div class="inputs">
             <input type="date" id="start-date-inp" class="date-input">
             <input type="date" id="end-date-inp" class="date-input">
-            <input type="number" id="number-inp">
+            <input type="number" id="number-inp" placeholder="Amount">
         </div>
         <button id="today-btn">Today</button>
         <button id="submit-btn">Submit</button>
-        <div id="work-container">
+        <div class="work-container">
             <p class="amt" id="amt-per-year">Amount per Year: </p>
             <p class="amt" id="amt-per-month">Amount per Month: </p>
             <p class="amt" id="amt-per-week">Amount per Week: </p>
