reorganized index.html

--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 <body>
     <div class="container">
         <h1 id="title">Deadline Divider</h1>
-        <div class="inputs">
-            <input type="date" id="start-date-inp" class="date-input">
-            <input type="date" id="end-date-inp" class="date-input">
-            <div class="value-input-container">
-                
+        <div class="dates">
+            <div class="date-inputs">
+                <input type="date" id="start-date-inp" class="date-input">
+                <input type="date" id="end-date-inp" class="date-input">
             </div>
-            <button id="newValue">New Value</button>
+            <button id="today-btn">Today</button>
         </div>
+        <div class="value-input-container">
+            
+        </div>
+        <button id="newValue">New Value</button>
         <button id="today-btn">Today</button>
         <button id="submit-btn">Submit</button>
         <fieldset class="work-container">
