started creating skeleton for redesign

--- a/index.html
+++ b/index.html
@@ -15,23 +15,22 @@
         <h1 id="title">Deadline Divider</h1>
         <div class="dates">
             <div class="date-inputs">
-                <input type="date" id="start-date-inp" class="date-input">
-                <input type="date" id="end-date-inp" class="date-input">
+                <input type="date" id="startDateInput" class="date-input">
+                <input type="date" id="endDateInput" class="date-input">
             </div>
-            <button id="today-btn">Today</button>
+            <button id="todayBtn">Today</button>
         </div>
         <div class="value-input-container">
             
         </div>
-        <button id="newValue">New Value</button>
-        <button id="today-btn">Today</button>
-        <button id="submit-btn">Submit</button>
+        <button id="newValueBtn">New Value</button>
+        <button id="submitBtn">Submit</button>
         <fieldset class="work-container">
             <legend>Amount</legend>
-            <p class="amt" id="amt-per-year">Per Year: </p>
-            <p class="amt" id="amt-per-month">Per Month: </p>
-            <p class="amt" id="amt-per-week">Per Week: </p>
-            <p class="amt" id="amt-per-day">Per Day: </p>
+            <p class="amt" id="amtPerYear">Per Year: </p>
+            <p class="amt" id="amtPerMonth">Per Month: </p>
+            <p class="amt" id="amtPerWeek">Per Week: </p>
+            <p class="amt" id="amtPerDay">Per Day: </p>
         </fieldset>
     </div>
     <script src="script.js"></script>
