--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     <div class="container">
         <h1 id="title">Deadline Divider</h1>
         <div class="dates">
-            <div class="date-inputs">
+            <div class="start-date">
                 <input type="date" id="startDateInput" class="date-input">
-                <input type="date" id="endDateInput" class="date-input">
+                <button id="todayBtn" class="today-btn">⟲</button>
             </div>
-            <button id="todayBtn">Today</button>
+            <input type="date" id="endDateInput" class="date-input">
         </div>
         <div class="value-input-container">
             
         </div>
-        <button id="newValueBtn">New Value</button>
-        <button id="submitBtn">Submit</button>
+        <button id="newValueBtn" class="main-btn new-value-btn">New Value</button>
+        <button id="submitBtn" class="main-btn submit-btn">Submit</button>
         <fieldset class="work-container">
             <legend>Amount</legend>
             <p class="amt" id="amtPerYear">Per Year: </p>
