new value button now summons input field

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <input type="date" id="endDateInput" class="date-input">
         </div>
-        <div class="value-input-container">
+        <div class="value-container" id="valueContainer">
             
         </div>
         <button id="newValueBtn" class="main-btn new-value-btn">New Value</button>
