reverted feature changes

--- a/index.html
+++ b/index.html
@@ -18,13 +18,9 @@
                 <input type="date" id="start-date-inp" class="date-input">
                 <input type="date" id="end-date-inp" class="date-input">
             </div>
+            <input type="number" id="number-inp">
             <button id="today-btn">Today</button>
         </div>
-        <div class="value-input-container">
-            
-        </div>
-        <button id="newValue">New Value</button>
-        <button id="today-btn">Today</button>
         <button id="submit-btn">Submit</button>
         <fieldset class="work-container">
             <legend>Amount</legend>
