submit button now displays the total

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </div>
         <button id="newValueBtn" class="main-btn new-value-btn">New Value</button>
         <button id="submitBtn" class="main-btn submit-btn">Submit</button>
+        <p id="totalCount">Total: </p>
         <fieldset class="work-container">
             <legend>Amount</legend>
             <p class="amt" id="amtPerYear">Per Year: </p>
