--- a/index.html
+++ b/index.html
@@ -25,14 +25,10 @@
         </div>
         <button id="newValueBtn" class="main-btn new-value-btn">New Value</button>
         <button id="submitBtn" class="main-btn submit-btn">Submit</button>
-        <p id="totalCount">Total: </p>
-        <fieldset class="work-container">
-            <legend>Amount</legend>
-            <p class="amt" id="amtPerYear">Per Year: </p>
-            <p class="amt" id="amtPerMonth">Per Month: </p>
-            <p class="amt" id="amtPerWeek">Per Week: </p>
-            <p class="amt" id="amtPerDay">Per Day: </p>
-        </fieldset>
+        <div class="final-container" id="finalContainer">
+            <p class="total" id="total"></p>
+            <p class="amt-per-day" id="amtPerDay"></p>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
