added some stuff

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
             </div>
             <input type="date" id="endDateInput" class="date-input">
         </div>
+        <div class="extras">
+            <button class="main-btn reset-btn" id="resetBtn">Reset</button>
+            <div class="checkbox">
+                <input type="checkbox" name="include-weekends" id="weekendsChk">
+                <p>Include Weekends</p>
+            </div>
+        </div>
         <div class="value-container" id="valueContainer">
             
         </div>
