--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </div>
         <div class="extras">
             <button class="main-btn reset-btn" id="resetBtn">Reset</button>
+            <div class="spacer" id="spacer"></div>
             <div class="checkbox">
                 <input type="checkbox" name="include-weekends" id="weekendsChk">
                 <p>Include Weekends</p>
