first value is fixed and cannot be deleted

--- a/index.html
+++ b/index.html
@@ -24,12 +24,17 @@
             <button class="main-btn reset-btn" id="resetBtn">Reset</button>
             <div class="spacer" id="spacer"></div>
             <div class="checkbox">
-                <input type="checkbox" name="include-weekends" id="weekendsChk">
+                <input type="checkbox" name="include-weekends" id="weekendsChk" checked>
                 <p>Include Weekends</p>
             </div>
         </div>
         <div class="value-container" id="valueContainer">
-            
+            <div class="value-field" id="valueField0">
+                <form action="submit" onsubmit="return false">
+                    <input type="number" min="0" placeholder="num" id="valueInput0" class="value-input">
+                    <button id="visSubmitBtn0" class="val-btn val-submit-btn">+</button>
+                </form>`
+            </div>
         </div>
         <button id="newValueBtn" class="main-btn new-value-btn">New Value</button>
         <button id="submitBtn" class="main-btn submit-btn">Submit</button>
